# insert-ordered-containers

./: CHANGELOG.md  cabal.project  insert-ordered-containers.cabal
.github/workflows/: haskell-ci.yml
src/Data/HashMap/Strict/: InsOrd.hs
src/Data/HashSet/: InsOrd.hs
test/: Tests.hs
