cabal-version:      2.2
name:               insert-ordered-containers
version:            0.2.7
synopsis:
  Associative containers retaining insertion order for traversals.

description:
  Associative containers retaining insertion order for traversals.
  .
  The implementation is based on `unordered-containers`.

category:           Web
homepage:           https://github.com/erikd/insert-ordered-containers#readme
bug-reports:        https://github.com/erikd/insert-ordered-containers/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Erik de Castro Lopo <erikd@mega-nerd.com>, Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.3
   || ==9.12.2
   || ==9.14.1

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/erikd/insert-ordered-containers

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall -Wunused-packages
  build-depends:
    , aeson                 >=2.2.3.0  && <2.3
    , base                  >=4.12.0.0 && <4.23
    , deepseq               >=1.4.4.0  && <1.6
    , hashable              >=1.4.7.0  && <1.6
    , indexed-traversable   >=0.1.4    && <0.2
    , lens                  >=5.2.3    && <5.4
    , optics-core           >=0.4.1.1  && <0.5
    , optics-extra          >=0.4.2.1  && <0.5
    , semigroupoids         >=6.0.1    && <6.1
    , transformers          >=0.5.6.2  && <0.7
    , unordered-containers  >=0.2.20   && <0.3

  exposed-modules:
    Data.HashMap.Strict.InsOrd
    Data.HashSet.InsOrd

  other-modules:    Data.HashMap.InsOrd.Internal

test-suite ins-ord-containers-tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   test
  ghc-options:      -Wall

  -- inherited from library
  build-depends:
    , aeson
    , base
    , base-compat
    , hashable
    , insert-ordered-containers
    , lens
    , QuickCheck                 >=2.13.2   && <2.18
    , tasty                      >=0.10.1.2 && <1.6
    , tasty-quickcheck           >=0.8.3.2  && <0.12
    , unordered-containers
